--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
-  text-align: center;
+/*=============== Google Fonts ===============*/
+ @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"); 
+ @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+/*=============== Variables CSS ===============*/
+:root {
+  --header-height: 3rem;
+
+  /*========== Colors ==========*/
+
+
+  --title-color: #282929;
+  --title-color-dark: #16150a;
+  --hover-color: #393b3b;
+  --note-color: #7cb0d3;
+  --text-color: #1f1f1f;
+  --body-color: #cecece;
+  --footer-color: #e6e6e6;
+  --container-color: #dadada;
+
+  /*#fef9f8*/
+  /*282929*/
+
+  /*========== Font ==========*/
+  --body-font: "Poppins", sans-serif;  
+  --header-font: 'Pacifico', cursive;
+
+  --big-font-size: 3.5rem;
+  --h1-font-size: 2.25rem;
+  --h2-font-size: 1.5rem;
+  --h3-font-size: 1.25rem;
+  --normal-font-size: 1rem;
+  --small-font-size: 0.875rem;
+  --smaller-font-size: 0.813rem;
+  --tiny-font-size: 0.625rem;
+
+  /*========== Font weight ==========*/
+  --font-normal: 400;
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
+  /*========== z Index ==========*/
+  --z-tooltip: 10;
+  --z-fixed: 100;
+  --z-modal: 1000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Responsive typography */
+@media screen and (max-width: 992px) {
+  :root {
+    --big-font-size: 3.75rem;
+    --h1-font-size: 1.5rem;
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1rem;
+    --normal-font-size: 0.938rem;
+    --small-font-size: 0.813rem;
+    --smaller-font-size: 0.75rem;
   }
 }
+/*=============== Base ===============*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+html {
+  scroll-behavior: smooth;
+}
+
+body,
+button,
+input,
+textarea {
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+}
+
+body {
+  background-color: var(--body-color);
+  color: var(--text-color);
+}
+
+h1,
+h2,
+h3 {
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+}
+/* 
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+} */
+
+/*=============== Buttons ===============*/
+/* .button {
+  display: inline-block;
+  background-color: var(--title-color);
+  color: var(--container-color);
+  padding: 1.25rem 2rem;
+  border-radius: 0.2rem;
+  font-weight: var(--font-medium);
+  cursor: pointer;
+  transition: .3s;
+}
+
+.button:hover {
+  background-color: var(--hover-color);
+}
+
+.button__icon {
+  margin-left: var(--mb-0-5);
+}
+
+.button--flex {
+  display: inline-flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+} */
+
+/*=============== Breakpoints ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
 }
 
-.App-link {
-  color: #61dafb;
+/* For medium devices */
+@media screen and (max-width: 768px) {
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width: 576px) {
+}
+
+/* For small devices */
+@media screen and (max-width: 350px) {
+ 
 }
